@@ -1,4 +1,4 @@
-AC_INIT([EBox-samba], [0.12.6.100])
+AC_INIT([EBox-samba], [0.12.6.101])
 
 AC_CONFIG_AUX_DIR([config])
 AC_CONFIG_SRCDIR([src/EBox/Samba.pm])
